# native-remote-config-wrapper

./: .gitignore  CMakeLists.txt  main.js  package.json  remote_config.i  swig-config.js
android/: build.gradle
android/src/main/: AndroidManifest.xml
bindings/auto/3.7.x/: jsb_native_remote_config_auto.cpp  jsb_native_remote_config_auto.h
bindings/auto/3.x.x_3.6.x/: jsb_native_remote_config_auto.cpp  jsb_native_remote_config_auto.h  jsb_native_remote_config_auto.json
bindings/manual/: RemoteConfigJSHelper.cpp  RemoteConfigJSHelper.h
bindings_genrator/: bridge_gen.sh  genbindings.py  native_remote_config.ini  userconf.ini
cpp/: firebase_remote_config.cpp  firebase_remote_config.h
cpp/listener/: RemoteConfigListener.cpp  RemoteConfigListener.h
scripts/: IRemoteConfig.ts  RemoteConfigApi.ts
scripts/native/: RemoteConfigGameHelper.ts
